--- a/account.html
+++ b/account.html
@@ -69,7 +69,7 @@
                 <div class="row">
                     <div class="footer-col-1">
                         <h3>Download Our App</h3>
-                        <p>Download app For Android and iso mobile phone</p>
+                        <p>Download app For Android and iso mobile phone's</p>
                         <div class="app-logo">
                             <img src="image/commarce/play-store.png" alt="Erroe">
                             <img src="image/commarce/app-store.png" alt="Erroe">
